--- a/gocodeshop/src/components/CollectionSort/CollectionSort.css
+++ b/gocodeshop/src/components/CollectionSort/CollectionSort.css
@@ -1,10 +1,7 @@
 .collection-sort {
     display: flex;
     flex-direction: column;
-  }
-  
-  .collection-sort:first-child {
-    padding-right: 20px;
+    padding-left: 20px;
   }
   
   label {
