--- a/gocodeshop/src/components/ProductCard/ProductCard.css
+++ b/gocodeshop/src/components/ProductCard/ProductCard.css
@@ -18,7 +18,35 @@
     padding-top: 20px;
     text-align: center;
   }
+
+  .buttons-amount{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 2px;
+    align-items: center
+  }
+
+  .amount{
+    width: 15%;
+    text-align: center;
+
+  }
   
+  input[type='number'] {
+    width: 82%;
+    padding: 8px;
+    border: 2px solid gray;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    background-color: #f2f2f2;
+    box-sizing: border-box;
+  }
+
+
+
   @media (max-width: 920px) {
     .product-card {
       flex: 1 21%;
