--- a/gocodeshop/src/components/Button/Button.css
+++ b/gocodeshop/src/components/Button/Button.css
@@ -1,5 +1,4 @@
 button{
-    width: 40%;
     padding: 4px 8px;
     margin: 2px;
     border-radius: 5px;
@@ -18,4 +17,8 @@ button{
 
   button[value='🛒']:hover {
     opacity: 1.0;
+  }
+
+  .bybutton{
+    width: 40%;
   }
