--- a/gocodeshop/src/components/Button/Button.css
+++ b/gocodeshop/src/components/Button/Button.css
@@ -6,19 +6,20 @@ button{
       box-sizing: border-box;
   }
 
-  button[value='🛒'] {
+  .MyCart * {
     width: 70px;
     height: 70px;
     font-size: 35px;
     border: 0px solid transparent;
-    background-color: rgb(131, 131, 131);
+    opacity: 1.0;
+    padding-left: 12px;
+    padding-top: 5px;
+  }
+
+  button:hover {
     opacity: 0.7;
   }
 
-  button[value='🛒']:hover {
-    opacity: 1.0;
-  }
-
   .bybutton{
-    width: 40%;
+    width: 80%;
   }
